tests/sema/fail/v5_fail_extend_i64.ep
# COMPILE_FAIL: extend expects an array with the same element type
fun main(): void {
    let a = new i64[1]
    let b = new u8[1]
    a.extend(b)
}
